--- a/style.css
+++ b/style.css
@@ -61,11 +61,13 @@ body {
 
 .qrCard {
     background-color: white;
-    padding: 15px;
+    padding: 20px 10px;
     border-radius: 16px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 250px;
+    overflow: hidden;
+    height: fit-content;
     transition: transform 0.3s;
 }
 
@@ -80,9 +82,12 @@ body {
 }
 
 .qrCard p {
-    font-size: 18px;
+    font-size: 15px;
     margin-bottom: 10px;
     color: #555;
+    overflow: hidden;
+    padding: 0 10px;
+
 }
 
 #sFlec {
